# efika-data

./: 16384.5d  16384.5d.clu  65536.5d  65536.5d.clu  CMakeLists.txt  youtube.clu
cmake/: Dependencies.cmake
include/efika/: data.h.in
include/efika/data/: path.h.in
